# series

./: ListM.cabal  Main.hs  README.md  Series.cabal  bench.html
ListM/: Combinators.hs  Fusion.hs  Types.hs
Series/: ByteString.hs  Combinators.hs  Fusion.hs  Interop.hs  Prelude.hs  Types.hs
Series/Folding/: ByteString.hs  Prelude.hs
Series/FreeT/: Prelude.hs
Series/List/: Prelude.hs
Series/Prelude/: Direct.hs  Fused.hs  Naive.hs
Series/Producer/: Prelude.hs
benchmarks/: benchmarks.hs  report.tpl
