name:                Series
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
license:             BSD-3
license-file:        LICENSE

-- The package author(s).
author:              michaelt
maintainer:          what_is_it_to_do_anything@yahoo.com
category:            Data
build-type:          Simple
 
extra-source-files:
  .gitignore
  README.md
  Main.hs
-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  -- Modules exported by the library.
  exposed-modules:     Series.Combinators, Series.Fusion, Series.Types
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    LambdaCase, RankNTypes, EmptyCase, StandaloneDeriving, FlexibleContexts, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveTraversable, UndecidableInstances
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.7 && <4.8, pipes, mtl >=2.1 && <2.2, mmorph >=1.0 && <1.1, transformers >=0.3 && <0.4, free >=4.9 && <4.10
  
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:      -O2 
  
benchmark benchmarks
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benchmarks
  main-is:          Benchmarks.hs
  ghc-options:      -O2 -rtsopts -threaded  -ddump-rule-firings

  build-depends:
    base == 4.*,
    criterion ,
    transformers,
    pipes, 
    Series 